# sum-totality

./: CHANGELOG.md  README.md  sum-totality.cabal
example/: Bidirectional.hs  Main.hs
src/: SumTotality.hs
src/SumTotality/: Bidirectional.hs  NArity.hs
