cabal-version:      2.4
name:               sum-totality
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         aaron@flipstone.com

-- A copyright notice.
-- copyright:
-- category:

library
  hs-source-dirs: src
  build-depends: base
  default-language: Haskell2010
  exposed-modules: SumTotality
                   SumTotality.NArity

executable example
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.0.0, sum-totality
    hs-source-dirs:   example
    default-language: Haskell2010
